<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aluno.segunda_questao.Tela3Activity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_1"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/text_nota1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_1"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_peso1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite o peso da nota 1"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_2"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/text_nota2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_2"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/edit_peso2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_peso_da_nota_2"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular peso"
        android:layout_gravity="center"
        android:onClick="calcular"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:layout_gravity="center"
        android:onClick="cancelar"/>


</LinearLayout>
